Name:             atp-haskell
Version:          1.5.3
Synopsis:         Translation from Ocaml to Haskell of John Harrison's ATP code
Description:      This package is a naive translation of the automated theorem prover written in OCaml in John Harrison's
                  book "Practical Logic and Automated Reasoning".
Homepage:         https://github.com/seereason/atp-haskell
License-File:     LICENSE.txt
Author:           John Harrison, David Fox <dsf@seereason.com>
Maintainer:       SeeReason Partners <partners@seereason.com>
Bug-Reports:      https://github.com/seereason/atp-haskell/issues
Category:         Logic, Theorem Provers
Cabal-version:    >= 1.9
Build-Type:       Simple
Extra-Source-Files: tests/Extra.hs

Library
  Build-Depends: applicative-extras, base, containers, hashable, HUnit, mtl, pretty >= 1.1.2, syb, template-haskell
  GHC-options: -Wall -O2
  Exposed-Modules:
    Lib
    Lib.Pretty
    Formulas
    Prop
    FOL
    Skolem
    PropExamples
    DefCNF
    DP

Test-Suite atp-haskell-tests
  Type: exitcode-stdio-1.0
  Hs-Source-Dirs: tests
  Main-Is: Main.hs
  Build-Depends: atp-haskell, base, containers, HUnit
  GHC-options: -Wall -O2
